--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" href="./book-store-icon.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
